--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -1,8 +1,4 @@
 main {
-  border-left: 1px solid tomato;
-  border-right: 1px solid tomato;
-
-  // height: 100vh;
   text-align: left;
   margin: 0 auto;
   width: 80%;
