--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -44,3 +44,9 @@ nav {
     }
   }
 }
+
+@media screen and (max-width: 50em) {
+  .web-nav {
+    display: none;
+  }
+}
